--- a/WpfApp3/UC_City.xaml
+++ b/WpfApp3/UC_City.xaml
@@ -5,8 +5,40 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp3"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="900" FontFamily="Century Gothic" FontSize="16">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0.2*"/>
+            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Button x:Name="InsertB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Вставить данные" Grid.Row="0" Height="Auto" Width="Auto" Click="InsertB_Click"/>
+        <Button x:Name="UpdateB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Обновить данные" Grid.Row="0" Grid.Column="1" Height="Auto" Width="Auto" Click="UpdateB_Click"/>
+        <Button x:Name="DeleteB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Удалить данные" Grid.Row="0" Grid.Column="2" Height="Auto" Width="Auto" Click="DeleteB_Click"/>
+        <Button x:Name="SearchB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Поиск" Grid.Row="1" Grid.Column="0" Height="Auto" Width="Auto" Click="SearchB_Click"/>
+        <Button x:Name="FilterB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Фильтр" Grid.Row="1" Grid.Column="2" Height="Auto" Width="Auto" Click="FilterB_Click"/>
+        <UniformGrid Rows="2" Grid.Column="1" Grid.Row="1">
+            <ComboBox x:Name="ColumnsList"/>
+            <TextBox x:Name="TBSearchFilter"/>
+        </UniformGrid>
+        <DataGrid x:Name="DG" Grid.Row="2" Grid.ColumnSpan="3" Grid.RowSpan="5"  IsReadOnly="True"/>
+        <TextBlock Text="Введите ID" Grid.Column="4" VerticalAlignment="Center"/>
+        <TextBox x:Name="Column1" Grid.Column="5" VerticalAlignment="Center"/>
+        <TextBlock Text="Город" Grid.Column="4" Grid.Row="1" VerticalAlignment="Center" TextWrapping="Wrap"/>
+        <TextBox x:Name="Column2" Grid.Column="5" Grid.Row="1" VerticalAlignment="Center"/>
+        <TextBlock Text="Страна" Grid.Column="4" Grid.Row="2" VerticalAlignment="Center" TextWrapping="Wrap"/>
+        <TextBox x:Name="Column3" Grid.Column="5" Grid.Row="2" VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
