--- a/WpfApp3/UC_Ticket.xaml
+++ b/WpfApp3/UC_Ticket.xaml
@@ -5,44 +5,44 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp3"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="900" FontFamily="Century Gothic" FontSize="16">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.1*"/>
             <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0.2*"/>
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.1*"/>
             <RowDefinition/>
-            <RowDefinition Height="0.2*"/>
-            <RowDefinition Height="0.1*"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
-
-        <DataGrid Name="DG_Basic" Grid.Row="1" Grid.Column="1"/>
-        <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
-            <Button Name="ADD" Margin="10" FontSize="20" Content="Вставить" Width="100"/>
-            <Button Name="UPD" Margin="10" FontSize="20" Content="Обновить" Width="100"/>
-            <Button Name="DEL" Margin="10" FontSize="20" Content="Удалить" Width="100"/>
-        </StackPanel>
-        <StackPanel  Grid.Column="2" Orientation="Horizontal" Margin="0.6,30,0,180.4" Grid.RowSpan="2" HorizontalAlignment="Left" Width="222">
-            <Button Content="Button" Width="75" Margin="0,258,0,0"/>
-
-        </StackPanel>
-        <TextBox Grid.Column="3" Grid.Row="1" Name="Nazv" FontSize="20" Margin="0,40,0,228"  />
-        <TextBox Grid.Column="3" Grid.Row="1" Name="Num" FontSize="20" Margin="0,208,0,56"  />
-        <ComboBox x:Name="CmbBox"  Margin="7,10,5,286" Grid.Column="2" SelectedIndex="1" Grid.Row="1">
-            <ComboBoxItem Content="Name"/>
-            <ComboBoxItem Content="Model"/>
-            <ComboBoxItem Content="Cost"/>
-        </ComboBox>
-        <Button x:Name="FindB"  Content="Поиск" Grid.Column="2" HorizontalAlignment="Left" Margin="7,80,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Height="27"/>
-        <Button x:Name="FilterB"  Content="Фильтрация" Margin="7,114,3,157" Grid.Column="2" Grid.Row="1"/>
-        <TextBox x:Name="TxtBox"  Grid.Column="2" HorizontalAlignment="Left" Height="35" Margin="7,40,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="170"/>
-        <TextBox Grid.Column="3" Grid.Row="1" x:Name="Model" FontSize="20" Margin="0,114,0,154"  />
-        <Label  Grid.Column="3" x:Name="Txt1" Content="Название" FontSize="24" Margin="0,0,0,248" Grid.Row="1"/>
-        <Label  Grid.Column="3" x:Name="Txt2" Content="Модель" FontSize="24" Margin="0,71,10,184" Grid.Row="1"/>
-        <Label  Grid.Column="3" x:Name="Txt3" Content="Стоимость" FontSize="24" Margin="0,159,10,89" Grid.Row="1"/>
+        <Button x:Name="InsertB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Вставить данные" Grid.Row="0" Height="Auto" Width="Auto" Click="InsertB_Click"/>
+        <Button x:Name="UpdateB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Обновить данные" Grid.Row="0" Grid.Column="1" Height="Auto" Width="Auto" Click="UpdateB_Click"/>
+        <Button x:Name="DeleteB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Удалить данные" Grid.Row="0" Grid.Column="2" Height="Auto" Width="Auto" Click="DeleteB_Click"/>
+        <Button x:Name="SearchB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Поиск" Grid.Row="1" Grid.Column="0" Height="Auto" Width="Auto" Click="SearchB_Click"/>
+        <Button x:Name="FilterB" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Content="Фильтр" Grid.Row="1" Grid.Column="2" Height="Auto" Width="Auto" Click="FilterB_Click"/>
+        <UniformGrid Rows="2" Grid.Column="1" Grid.Row="1">
+            <ComboBox x:Name="ColumnsList"/>
+            <TextBox x:Name="TBSearchFilter"/>
+        </UniformGrid>
+        <DataGrid x:Name="DG" Grid.Row="2" Grid.ColumnSpan="3" Grid.RowSpan="5"  IsReadOnly="True"/>
+        <TextBlock Text="Введите ID" Grid.Column="4" VerticalAlignment="Center"/>
+        <TextBox x:Name="Column1" Grid.Column="5" VerticalAlignment="Center"/>
+        <TextBlock Text="Стоимость" Grid.Column="4" Grid.Row="1" VerticalAlignment="Center" TextWrapping="Wrap"/>
+        <TextBox x:Name="Column2" Grid.Column="5" Grid.Row="1" VerticalAlignment="Center"/>
+        <TextBlock Text="Даты" Grid.Column="4" Grid.Row="2" VerticalAlignment="Center" TextWrapping="Wrap"/>
+        <TextBox x:Name="Column3" Grid.Column="5" Grid.Row="2" VerticalAlignment="Center"/>
+        <TextBlock Text="Клиент" Grid.Column="4" Grid.Row="3" VerticalAlignment="Center" TextWrapping="Wrap"/>
+        <TextBox x:Name="Column4" Grid.Column="5" Grid.Row="3" VerticalAlignment="Center"/>
+        <TextBlock Text="Аэропорт" Grid.Column="4" Grid.Row="4" VerticalAlignment="Center" TextWrapping="Wrap"/>
+        <TextBox x:Name="Column5" Grid.Column="5" Grid.Row="4" VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
